feat: swagger @Router api/v1/products [post], add @Param formData
