# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   controllers.pagingResult:
     properties:
@@ -48,7 +47,6 @@ definitions:
       paging:
         $ref: '#/definitions/controllers.pagingResult'
     type: object
-host: localhost:8080
 info:
   contact: {}
   title: Swagger Example API
@@ -75,6 +73,47 @@ paths:
           schema:
             $ref: '#/definitions/controllers.productsPaging'
       summary: FindAll - query-products
+      tags:
+      - product
+    post:
+      consumes:
+      - multipart/form-data
+      parameters:
+      - description: name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: desc
+        in: formData
+        name: desc
+        required: true
+        type: string
+      - description: price
+        in: formData
+        name: price
+        required: true
+        type: integer
+      - description: image
+        in: formData
+        name: image
+        required: true
+        type: file
+      - description: categoryId
+        in: formData
+        name: categoryId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.productRespons'
+      security:
+      - BearerAuth: []
+      summary: Create - insert data
       tags:
       - product
   /api/v1/products/{id}:
@@ -118,4 +157,9 @@ paths:
           schema:
             additionalProperties: true
             type: object
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
